# craftax.c

./: .gitignore  CITATION.cff  Makefile  NOTICE  README.md  bench.c  bench_hot.c  bench_hot_pool.c  bench_tp.c  bench_tp_pool.c  craftax.c  craftax.h  craftax_pool.c  sanity.c  worker_pool.c  worker_pool.h
python/: README.md  profile_policy.py  profile_policy2.py  profile_stages.py  profile_torch.py  pyproject.toml  sweep_training.py  sweep_training2.py  test_triton_ppo.py  train_craftax_c.py  train_graph.py  train_pipelined.py  triton_ppo.py
python/craftax_c/: __init__.py  bindings.py  environment.py
