[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "craftax_c"
version = "0.1.0"
description = "Python bindings for craftax.c (CPU Craftax-Classic)"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "gymnasium",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["craftax_c*"]
